Tarjetas productos destacados 1

--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
 	<section class="mt-50">
 		<div class="container">
 			<h3>Productos destacados</h3>
+			<div class="row mt-20">
+				<div class="col-6 ">
+					<div class="card-style shadow rounded" style="background-color:blue">
+					</div>
+				</div>
+				<div class="col-6">
+					<div class="card-style shadow rounded" style="background-color:red">
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 	<footer>
